Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/JobStep__c.object-meta.xml
<CustomObject>
    <label>Job Step</label>
    <nameField>
        <label>Job Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>