Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Api Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>