Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/ConfigJson__c.field-meta.xml
<CustomField>
    <fullName>ConfigJson__c</fullName>
    <label>ConfigJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>