Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/CustomType__c.field-meta.xml
<CustomField>
    <fullName>CustomType__c</fullName>
    <label>Custom Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>