Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/Destination_Id__c.field-meta.xml
<CustomField>
    <fullName>Destination_Id__c</fullName>
    <formula>CASESAFEID(JobExecution__r.Destination__c)</formula>
    <label>Destination Id</label>
    <type>Text</type>
</CustomField>