Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/ExecutionSequence__c.field-meta.xml
<CustomField>
    <fullName>ExecutionSequence__c</fullName>
    <description>Used to define the order of execution in the context of User Story Deployment</description>
    <label>Execution Sequence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>before</fullName>
            </value>
            <value>
                <fullName>after</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>