Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository__c</fullName>
    <formula>BLANKVALUE(
    JobExecution__r.Snapshot__r.Git_Repository__c, 
    BLANKVALUE(
        JobExecution__r.Pipeline__r.Git_Repository__c,
        BLANKVALUE(
            JobExecution__r.Promotion__r.Project__r.Deployment_Flow__r.Git_Repository__c, 
            JobExecution__r.Deployment__r.Promotion__r.Project__r.Deployment_Flow__r.Git_Repository__c
        )
    )
)</formula>
    <label>Git Repository</label>
    <type>Text</type>
</CustomField>