Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/JobExecution__c.field-meta.xml
<CustomField>
    <fullName>JobExecution__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Execution</label>
    <referenceTo>JobExecution__c</referenceTo>
    <relationshipLabel>Job Steps</relationshipLabel>
    <relationshipName>JobSteps</relationshipName>
    <type>Lookup</type>
</CustomField>