Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/JobTemplate__c.field-meta.xml
<CustomField>
    <fullName>JobTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Job Template</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Job Steps</relationshipLabel>
    <relationshipName>JobSteps</relationshipName>
    <type>Lookup</type>
</CustomField>