Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/Parent_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Owner_Id__c</fullName>
    <formula>IF(NOT(ISBLANK( JobExecution__r.Deployment__c )), JobExecution__r.Deployment__r.Promotion__r.OwnerId,
    IF(NOT(ISBLANK( JobExecution__r.Promotion__c )), JobExecution__r.Promotion__r.OwnerId, OwnerId))</formula>
    <label>Parent Owner Id</label>
    <type>Text</type>
</CustomField>