Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Id__c</fullName>
    <formula>BLANKVALUE(
JobExecution__r.Pipeline__c,
BLANKVALUE(
    JobExecution__r.Promotion__r.Project__r.Deployment_Flow__c, 
    BLANKVALUE(
        JobExecution__r.Promotion__r.Release__r.Project__r.Deployment_Flow__c,
        BLANKVALUE(
            JobExecution__r.Deployment__r.Promotion__r.Project__r.Deployment_Flow__c, 
            JobExecution__r.Deployment__r.Promotion__r.Release__r.Project__r.Deployment_Flow__c
        )
    )
)
)</formula>
    <label>Pipeline Id</label>
    <type>Text</type>
</CustomField>