Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Result</label>
    <referenceTo>Result__c</referenceTo>
    <relationshipLabel>Job Steps</relationshipLabel>
    <relationshipName>JobSteps</relationshipName>
    <type>Lookup</type>
</CustomField>