Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/ResultDataJson__c.field-meta.xml
<CustomField>
    <fullName>ResultDataJson__c</fullName>
    <label>Result Data Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>