Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <formula>CASESAFEID(JobExecution__r.Source__c)</formula>
    <label>Source Id</label>
    <type>Text</type>
</CustomField>