Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(NOT(ISBLANK(JobTemplate__c)), &apos;NA&apos;, 
    if(ISBLANK(Result__c), &apos;Pending&apos;, TEXT(Result__r.Status__c)))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>