Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/fields/UserStory__c.field-meta.xml
<CustomField>
    <fullName>UserStory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>Deployment Steps</relationshipLabel>
    <relationshipName>JobSteps</relationshipName>
    <type>Lookup</type>
</CustomField>