Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/validationRules/Execution_Sequence_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Execution_Sequence_Required</fullName>
    <active>true</active>
    <description>Execution Sequence is required for Deployment steps</description>
    <errorConditionFormula>AND( UserStory__c &lt;&gt; null, ISPICKVAL(ExecutionSequence__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>ExecutionSequence__c</errorDisplayField>
    <errorMessage>Execution Sequence is required for Deployment steps</errorMessage>
</ValidationRule>