Dummy_Package_for_scratch_org/main/default/objects/JobStep__c/validationRules/Template_OR_Execution_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Template_OR_Execution_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( JobTemplate__c ), ISBLANK(  JobExecution__c  ),  ISBLANK( UserStory__c )  )</errorConditionFormula>
    <errorMessage>JobTemplate, Execution, or User Story is required</errorMessage>
</ValidationRule>